# Cognitive

./: .gitignore  1.cpp  ACCENT_COLORS_AUDIT.md  LICENSE  README.md  er.name  index.html  package-lock.json  package.json  push.bat  tailwind.config.js  test-diagnostics.js  test-diagnostics.ts  test-ports.html  tsconfig.json  vite.config.ts
.github/: WORKFLOWS_INFO.md
.github/workflows/: build.yml  linux-appimage.yml
.timeline/a57fd86af9896e79/: meta.json
.timeline/aebff86d9848ca3b/: meta.json
.timeline/b335630551682c19/: meta.json
.timeline/c693279643b8cd5d/: meta.json
src/: App.css  App.module.css  App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  cognetive.desktop  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: agentrouter.rs  anthropic.rs  api_keys.rs  git_commands.rs  google.rs  lib.rs  main.rs  npm.rs  ollama.rs  openai.rs  proxy_config.rs  xai.rs
src-tauri/src/agent/: commands.rs  gemini.rs  mod.rs  ollama.rs  openai.rs  rag.rs  system_prompt.rs  tools.rs
src-tauri/src/command_palette/: commands.rs  defaults.rs  fuzzy.rs  registry.rs  types.rs
src-tauri/src/fs/: audio_metadata.rs  commands.rs  glob_utils.rs  mod.rs  types.rs
src-tauri/src/git/: mod.rs  push.rs
src-tauri/src/keybindings/: commands.rs  defaults.rs  mod.rs  store.rs  types.rs  utils.rs
src-tauri/src/lsp/: client.rs  mod.rs  protocol.rs
src-tauri/src/outline/: mod.rs
src-tauri/src/ports/: mod.rs
src-tauri/src/problems/: mod.rs
src-tauri/src/session/: commands.rs  defaults.rs  mod.rs  store.rs  types.rs
src-tauri/src/settings/: commands.rs  defaults.rs  mod.rs  store.rs  types.rs  validation.rs  watcher.rs
src-tauri/src/storage/: commands.rs  db.rs  mod.rs  models.rs  paths.rs
src-tauri/src/terminal/: mod.rs  session.rs
src-tauri/src/timeline/: history.rs
(+281 files in other folders)
